Fixed problem with green background not extending the full width on small screens.

--- a/css/codefest.css
+++ b/css/codefest.css
@@ -22,6 +22,10 @@
 /*
  *  Site banner
  */
+#banner {
+	background-color: #52d591;
+}
+
 #banner-logo {
 	background-color: #464646;
     padding-top: 15px;
